[package]
name = "a3-mod-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = { version = "1.1.0" }
chrono = { version = "0.4.23", features = ["serde"] }
chrono-humanize = { version = "0.2.2" }
dirs = { version = "4.0.0" }
open = { version = "3.2.0" }
quick-xml = { version = "0.26.0", features = ["serialize"] }
rfd = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
